Use CSS overflow to avoid to let the table overflows on the right

--- a/wiremaps/web/static/wiremaps.css
+++ b/wiremaps/web/static/wiremaps.css
@@ -206,6 +206,10 @@ div#description
 }
 
 /* Ports */
+div#portscontainer
+{
+    overflow: auto;
+}
 table#ports
 { 
     margin-top: 1em;
